--- a/package.json
+++ b/package.json
@@ -16,16 +16,25 @@
     "gulp": "^3.9.1",
     "mongodb": "^3.0.0-rc0",
     "morgan": "~1.9.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "serve-favicon": "~2.4.5"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babelify": "^8.0.0",
     "browser-sync": "^2.18.13",
     "gulp-autoprefixer": "^4.1.0",
     "gulp-babel": "^7.0.0",
+    "gulp-browserify": "^0.5.1",
     "gulp-notify": "^3.0.0",
-    "gulp-sass": "^3.1.0"
+    "gulp-sass": "^3.1.0",
+    "install": "^0.10.4",
+    "npm": "^5.7.1"
   },
   "description": "Foundation6 + Sass + Gulp.js + Browserify + Express.js + Babel for easy site setup and less pain in the future.",
   "main": "app.js",
